Fixed heading margin on mobile breakpoint

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -473,6 +473,8 @@ section.textBlock
 	h2
 		margin: 0 0 0.5em 30%
 		line-height: 1em
+		+media('phones')
+			margin-bottom: 1rem
 
 
 
